--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">My Application</string>
-    <string name="button">Alaa</string>
+    <string name="click">Click</string>
     <string name="hintName">Enter your Namer</string>
 </resources>
