--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <string name="app_name">My Application</string>
     <string name="click">Click</string>
-    <string name="reset" >Click To Reset</string>
+    <string name="reset">Click To Reset</string>
     <string name="hintName">Enter your Namer</string>
+    <string name="welcome">Welcome</string>
+    <string name="Go">Go Second Activity</string>
 </resources>
