set Mail Action

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,7 @@
     <string name="hintName">Enter your Namer</string>
     <string name="welcome">Welcome</string>
     <string name="Go">Go Second Activity</string>
+    <string name="back">Back</string>
+    <string name="mail">Send Mail</string>
+    <string name="SendMail">Send Mail</string>
 </resources>
